--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
     "decentraland-commons": "git+https://github.com/decentraland/commons.git#release",
+    "decentraland-contracts": "git+https://github.com/decentraland/contracts.git#release",
     "ejs": "^2.5.7",
     "express": "^4.16.2",
     "uuid": "^3.1.0"
