--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Marketplace",
   "version": "0.1.0",
-  "description": "",
+  "description": "LAND manager and wallet for Decentraland",
   "main": "src/server.js",
   "scripts": {
     "lint": "npx eslint .",
