--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "lint": "npx eslint .",
     "lint:fix": "npx eslint --fix .",
     "test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/**/*.spec.js",
-    "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js specs/*.spec.js --watch",
+    "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/**/*.spec.js --watch",
     "build": "npm run lint && npm run test",
     "start": "babel-node src/server.js",
     "dev": "nodemon --exec npm run start"
