--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "npx eslint .",
     "lint:fix": "npx eslint --fix .",
-    "test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/**/*.spec.js",
-    "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/**/*.spec.js --watch",
+    "test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
+    "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "build": "npm run lint && npm run test",
     "start": "babel-node src/server.js",
     "dev": "nodemon --exec npm run start"
