--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
     "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "build": "npm run lint && npm run test",
-    "start": "babel-node src/server.js",
+    "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
   },
   "repository": {
