--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -4,3 +4,4 @@ REACT_APP_API_URL=
 REACT_APP_VERSION=
 REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
+REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS=
