--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,15 +10,20 @@
     "lint:fix": "npx eslint --fix src/",
     "test": "CI=true react-scripts test --env=jsdom",
     "prebuild": "npm run test",
-    "build": "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
-    "remotebuild": "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
+    "build":
+      "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
+    "remotebuild":
+      "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
     "eject": "react-scripts eject"
   },
   "dependencies": {
     "axios": "^0.17.0",
     "date-fns": "^1.29.0",
-    "decentraland-commons": "git+https://github.com/decentraland/commons.git#release",
-    "decentraland-contracts": "git+https://github.com/decentraland/contracts.git#release",
+    "decentraland-commons":
+      "git+https://github.com/decentraland/commons.git#release",
+    "decentraland-contracts":
+      "git+https://github.com/decentraland/contracts.git#release",
+    "ethereum-blockies": "^0.1.1",
     "history": "^4.7.2",
     "leaflet": "^1.3.0",
     "lodash.debounce": "^4.0.8",
