--- a/package.json
+++ b/package.json
@@ -6,10 +6,8 @@
   "scripts": {
     "lint": "npx eslint .",
     "lint:fix": "npx eslint --fix .",
-    "test":
-      "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
-    "watch:test":
-      "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
+    "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "build": "npm run lint && npm run test",
     "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
@@ -18,17 +16,17 @@
     "type": "git",
     "url": "https://github.com/decentraland/marketplace.git"
   },
-  "keywords": ["decentraland", "marketplace", "dapp"],
+  "keywords": [
+    "decentraland",
+    "marketplace",
+    "dapp"
+  ],
   "author": "Decentraland",
   "license": "ISC",
   "dependencies": {
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
-    "decentraland-commons":
-      "git+https://github.com/decentraland/commons.git#release",
-    "decentraland-contracts":
-      "git+https://github.com/decentraland/contracts.git#release",
-    "ejs": "^2.5.7",
+    "decentraland-commons": "git+https://github.com/decentraland/commons.git#release",
     "express": "^4.16.2",
     "uuid": "^3.1.0"
   },
