--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,9 @@ jobs:
     working_directory: /tmp/marketplace
     steps:
       - checkout
+      - type: shell
+        name: Install System Dependencies
+        command: sudo apt-get update && sudo apt install -y libusb-1.0-0 libusb-1.0-0-dev
       - restore_cache:
           keys:
           - v1-dependencies-{{ checksum "webapp/package.json" }}
@@ -42,6 +45,7 @@ jobs:
           - v1-dependencies-{{ checksum "webapp/package.json" }}
           - v1-dependencies-
       - run: cd webapp && npm install
+      - run: npm install npx
       - save_cache:
           paths:
             - node_modules
