--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
-    "decentraland-commons": "git+https://github.com/decentraland/commons.git#release",
+    "decentraland-commons": "2.3.3",
     "express": "^4.16.2",
     "uuid": "^3.1.0"
   },
