--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "Decentraland's LAND Manager, Wallet and Marketplace",
   "main": "src/server.js",
   "scripts": {
-    "lint": "npx eslint .",
-    "lint:fix": "npx eslint --fix .",
-    "test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
-    "watch:test": "npx mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "lint": "./node_modules/eslint/bin/eslint.js eslint .",
+    "lint:fix": "./node_modules/eslint/bin/eslint.js eslint --fix .",
+    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
+    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "build": "npm run lint && npm run test",
     "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
@@ -26,7 +26,7 @@
   "dependencies": {
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
-    "decentraland-commons": "2.3.3",
+    "decentraland-commons": "^2.3.3",
     "express": "^4.16.2",
     "uuid": "^3.1.0"
   },
