--- a/webapp/package.json
+++ b/webapp/package.json
@@ -1,55 +1,52 @@
 {
-    "name": "Marketplace-webapp",
-    "description": "Decentraland's LAND Manager, Wallet and Marketplace",
-    "version": "0.1.0",
-    "private": true,
-    "scripts": {
-        "start": "react-scripts start",
-        "pretest": "npm run lint",
-        "lint": "npx eslint src/",
-        "lint:fix": "npx eslint --fix src/",
-        "test": "CI=true react-scripts test --env=jsdom",
-        "prebuild": "npm run test",
-        "build":
-            "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
-        "remotebuild":
-            "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
-        "eject": "react-scripts eject"
-    },
-    "dependencies": {
-        "axios": "^0.17.0",
-        "date-fns": "^1.29.0",
-        "decentraland-commons":
-            "git+https://github.com/decentraland/commons.git#release",
-        "ethereum-blockies": "^0.1.1",
-        "history": "^4.7.2",
-        "leaflet": "^1.3.0",
-        "lodash.debounce": "^4.0.8",
-        "prop-types": "^15.5.10",
-        "react": "^16.0.0",
-        "react-autocomplete": "^1.7.2",
-        "react-dom": "^16.0.0",
-        "react-highlight-words": "^0.10.0",
-        "react-redux": "^5.0.6",
-        "react-router-dom": "^4.2.2",
-        "react-router-redux": "^5.0.0-alpha.6",
-        "react-scripts": "^1.1.0",
-        "redux": "^3.7.2",
-        "redux-logger": "^3.0.6",
-        "redux-saga": "^0.16.0",
-        "redux-thunk": "^2.2.0",
-        "reselect": "^3.0.1",
-        "tinycolor2": "^1.4.1"
-    },
-    "devDependencies": {
-        "babel-eslint": "^8.2.1",
-        "babel-polyfill": "^6.26.0",
-        "eslint": "^4.15.0",
-        "eslint-config-prettier": "^2.6.0",
-        "eslint-plugin-prettier": "^2.3.1",
-        "eslint-plugin-react": "^7.5.1",
-        "prettier": "^1.10.2",
-        "webpack": "^3.10.0",
-        "webpack-dotenv-plugin": "^2.0.2"
-    }
+  "name": "Marketplace-webapp",
+  "description": "Decentraland's LAND Manager, Wallet and Marketplace",
+  "version": "0.1.0",
+  "private": true,
+  "scripts": {
+    "start": "react-scripts start",
+    "pretest": "npm run lint",
+    "lint": "./node_modules/eslint/bin/eslint.js src/",
+    "lint:fix": "./node_modules/eslint/bin/eslint.js --fix src/",
+    "test": "CI=true react-scripts test --env=jsdom",
+    "prebuild": "npm run test",
+    "build": "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
+    "remotebuild": "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
+    "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "axios": "^0.17.0",
+    "date-fns": "^1.29.0",
+    "decentraland-commons": "^2.3.3",
+    "ethereum-blockies": "^0.1.1",
+    "history": "^4.7.2",
+    "leaflet": "^1.3.0",
+    "lodash.debounce": "^4.0.8",
+    "prop-types": "^15.5.10",
+    "react": "^16.0.0",
+    "react-autocomplete": "^1.7.2",
+    "react-dom": "^16.0.0",
+    "react-highlight-words": "^0.10.0",
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.6",
+    "react-scripts": "^1.1.0",
+    "redux": "^3.7.2",
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0",
+    "redux-thunk": "^2.2.0",
+    "reselect": "^3.0.1",
+    "tinycolor2": "^1.4.1"
+  },
+  "devDependencies": {
+    "babel-eslint": "^8.2.1",
+    "babel-polyfill": "^6.26.0",
+    "eslint": "^4.15.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.5.1",
+    "prettier": "^1.10.2",
+    "webpack": "^3.10.0",
+    "webpack-dotenv-plugin": "^2.0.2"
+  }
 }
