--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -103,7 +103,7 @@ workflows:
   version: 2
   build-deploy-release:
     jobs:
-      - build-release
+      - build-release:
           filters:
             branches:
               only: release
@@ -113,7 +113,7 @@ workflows:
 
   build-deploy-staging:
     jobs:
-      - build-staging
+      - build-staging:
           filters:
             branches:
               only: staging
