--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -6,3 +6,4 @@ REACT_APP_ROLLBAR_ACCESS_TOKEN=
 REACT_APP_INTERCOM_APP_ID=
 REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS=
+REACT_APP_MARKETPLACE_CONTRACT_ADDRESS=
