--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,7 +22,10 @@
     "history": "^4.7.2",
     "leaflet": "^1.3.0",
     "lodash.debounce": "^4.0.8",
+    "moment": "^2.20.1",
+    "numeral": "^2.0.6",
     "prop-types": "^15.5.10",
+    "query-string": "^5.1.0",
     "react": "^16.0.0",
     "react-autocomplete": "^1.7.2",
     "react-dom": "^16.0.0",
@@ -36,6 +39,8 @@
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "semantic-ui-css": "^2.2.14",
+    "semantic-ui-react": "^0.78.2",
     "tinycolor2": "^1.4.1"
   },
   "devDependencies": {
