--- a/webapp/package.json
+++ b/webapp/package.json
@@ -32,6 +32,7 @@
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
     "react-scripts": "^1.1.0",
+    "react-virtualized": "^9.18.5",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0",
