--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,6 +30,7 @@ jobs:
             REACT_APP_INTERCOM_APP_ID: z0h94kay
             REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS: 0x0f5d2fb29fb7d3cfee444a200298f468908cc942
             REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS: 0xf87e31492faf9a91b02ee0deaad50d51d56d5d4d
+            REACT_APP_MARKETPLACE_CONTRACT_ADDRESS: 0xdeadbeef
       - save_cache:
           paths:
             - webapp/build
@@ -64,6 +65,7 @@ jobs:
             REACT_APP_INTERCOM_APP_ID: z0h94kay
             REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS: 0x2a8fd99c19271f4f04b1b7b9c4f7cf264b626edb
             REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS: 0x7a73483784ab79257bb11b96fd62a2c3ae4fb75b
+            REACT_APP_MARKETPLACE_CONTRACT_ADDRESS: 0xdeadbeef
       - save_cache:
           paths:
             - webapp/build
@@ -98,6 +100,7 @@ jobs:
             REACT_APP_INTERCOM_APP_ID: z0h94kay
             REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS: 0x2a8fd99c19271f4f04b1b7b9c4f7cf264b626edb
             REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS: 0x7a73483784ab79257bb11b96fd62a2c3ae4fb75b
+            REACT_APP_MARKETPLACE_CONTRACT_ADDRESS: 0xdeadbeef
       - save_cache:
           paths:
             - webapp/build
