--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "eslint-config-prettier": "^2.6.0",
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
+    "faker": "^4.1.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.14.11",
     "prettier": "^1.10.2",
