Faster blockchain indexing

--- a/scripts/.env.example
+++ b/scripts/.env.example
@@ -1,2 +1,10 @@
+# Can be 'script' if you want to script some 'development' logs
 NODE_ENV=
+
 CONNECTION_STRING=
+
+LAND_REGISTRY_CONTRACT_ADDRESS=
+MARKETPLACE_CONTRACT_ADDRESS=
+
+# Not required, has fallback
+INDEX_BATCH_SIZE=
