--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
     "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
     "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "migrate": "cd migrations && ./migrate",
     "build": "npm run lint && npm run test",
     "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
@@ -28,6 +29,7 @@
     "body-parser": "^1.18.2",
     "decentraland-commons": "^2.7.3",
     "express": "^4.16.2",
+    "node-pg-migrate": "^2.23.0",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
