--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
     "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
     "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
-    "migrate": "cd migrations && ./migrate",
+    "init-db": "./scripts/initDb.js",
+    "migrate": "./migrations/migrate",
+    "renew-blockchain-data": "./scripts/renewBlockchainData.js",
+    "seed": "./scripts/seed.js",
+    "watch-marketplace": "./scripts/monitor/index.js transform Marketplace",
+    "watch-land": "./scripts/monitor/index.js transform LANDRegistry",
     "build": "npm run lint && npm run test",
     "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
