--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,6 +28,7 @@
     "react-autocomplete": "^1.7.2",
     "react-dom": "^16.0.0",
     "react-highlight-words": "^0.10.0",
+    "react-intl": "^2.4.0",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.6",
