--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "body-parser": "^1.18.2",
     "decentraland-commons": "^3.3.2",
     "express": "^4.16.2",
+    "flat": "^4.0.0",
     "node-pg-migrate": "^2.23.0",
     "uuid": "^3.1.0"
   },
