--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -58,7 +58,7 @@ jobs:
           command: cd webapp && npm run build
           environment:
             NODE_PATH: src/
-            NODE_ENV: production
+            NODE_ENV: development
             REACT_APP_API_URL: https://api.market.decentraland.today
             REACT_APP_VERSION: 0.1
             REACT_APP_ROLLBAR_ACCESS_TOKEN: ad890a7699424114a771373ee60720ac
