--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,5 @@
   "prettier.printWidth": 80,
   "prettier.singleQuote": true,
   "prettier.semi": false,
-  "editor.tabSize": 2,
-  "editor.formatOnSave": true
+  "editor.tabSize": 2
 }
