--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,10 +10,8 @@
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix src/",
     "test": "CI=true react-scripts test --env=jsdom",
     "prebuild": "npm run test",
-    "build":
-      "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
-    "remotebuild":
-      "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
+    "build": "REACT_APP_VERSION=$(git rev-parse --short HEAD) react-scripts build",
+    "remotebuild": "REACT_APP_VERSION=$(git rev-parse --short HEAD) NODE_PATH=/tmp/auction/webapp/node_modules react-scripts build",
     "eject": "react-scripts eject"
   },
   "dependencies": {
