chore: added segment integration

--- a/webapp/.env.example
+++ b/webapp/.env.example
@@ -9,3 +9,4 @@ REACT_APP_LOCAL_STORAGE_KEY=
 REACT_APP_MANA_TOKEN_CONTRACT_ADDRESS=
 REACT_APP_LAND_REGISTRY_CONTRACT_ADDRESS=
 REACT_APP_MARKETPLACE_CONTRACT_ADDRESS=
+REACT_APP_SEGMENT_API_KEY=
