--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "sanity-check": "./scripts/sanityCheck.js run",
     "seed": "./scripts/seed.js",
     "monitor-blockchain": "./scripts/monitor/index.js store",
+    "cli": "./scripts/mktcli.js",
     "build": "npm run lint && npm run test",
     "start": "cd src && babel-node server.js",
     "dev": "nodemon --exec npm run start"
