--- a/webapp/package.json
+++ b/webapp/package.json
@@ -18,6 +18,7 @@
     "axios": "^0.17.0",
     "date-fns": "^1.29.0",
     "decentraland-commons": "^3.5.0",
+    "dotenv": "^5.0.1",
     "ethereum-blockies": "^0.1.1",
     "history": "^4.7.2",
     "leaflet": "^1.3.0",
@@ -42,6 +43,7 @@
     "redux-storage-engine-localstorage": "^1.1.4",
     "redux-thunk": "^2.2.0",
     "reselect": "^3.0.1",
+    "rollbar": "^2.3.9",
     "semantic-ui-css": "^2.2.14",
     "semantic-ui-react": "^0.78.2",
     "tinycolor2": "^1.4.1"
