--- a/package.json
+++ b/package.json
@@ -32,10 +32,17 @@
   "dependencies": {
     "bignumber.js": "^5.0.0",
     "body-parser": "^1.18.2",
-    "decentraland-commons": "^3.5.0",
+    "commander": "^2.15.1",
+    "decentraland-commons": "3.6.0",
+    "dotenv": "^5.0.1",
     "express": "^4.16.2",
     "flat": "^4.0.0",
+    "mongodb": "^3.0.5",
     "node-pg-migrate": "^2.23.0",
+    "nodemailer": "^4.6.3",
+    "pg": "^7.4.1",
+    "rollbar": "^2.3.9",
+    "tunnel-ssh": "^4.1.4",
     "uuid": "^3.1.0"
   },
   "devDependencies": {
@@ -53,6 +60,8 @@
     "eslint-plugin-prettier": "^2.3.1",
     "eslint-plugin-react": "^7.5.1",
     "faker": "^4.1.0",
+    "inquirer": "^5.2.0",
+    "mailchimp-api-v3": "^1.8.0",
     "mocha": "^4.0.1",
     "nodemon": "^1.14.11",
     "prettier": "^1.10.2",
