chore: name change app startup script

--- a/etc/supervisor/mkt.conf
+++ b/etc/supervisor/mkt.conf
@@ -1,6 +1,6 @@
-[program:mkt]
+[program:mkt-app]
 numprocs=2
-process_name=mkt-%(process_num)s
+process_name=%(process_num)s
 command=npm run start
 autostart=true
 autorestart=true
