--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "lint": "./node_modules/eslint/bin/eslint.js .",
     "lint:fix": "./node_modules/eslint/bin/eslint.js --fix .",
-    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js",
-    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/spec_utils.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
+    "test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js",
+    "watch:test": "./node_modules/mocha/bin/mocha -r babel-register -r specs/specs_setup.js specs/setup.js src/*.spec.js src/**/*.spec.js --watch",
     "init-db": "./scripts/initDb.js",
     "migrate": "./migrations/migrate",
     "renew-blockchain-data": "./scripts/renewBlockchainData.js",
