--- a/src/.env.example
+++ b/src/.env.example
@@ -6,8 +6,9 @@ WEBAPP_PATH=
 SERVER_PORT=
 TRANSLATIONS_PATH=
 CONNECTION_STRING=
-NEW_RELIC_HOME=
 RPC_URL=
+
+NEW_RELIC_LICENSE_KEY=
 
 LAND_REGISTRY_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
