feat: add new relic to the server (#186)
* feat: add new relic to the server

* feat: bend the rules a bit, use a dynamic require

--- a/src/.env.example
+++ b/src/.env.example
@@ -8,5 +8,7 @@ TRANSLATIONS_PATH=
 CONNECTION_STRING=
 RPC_URL=
 
+NEW_RELIC_LICENSE_KEY=
+
 LAND_REGISTRY_CONTRACT_ADDRESS=
 MARKETPLACE_CONTRACT_ADDRESS=
