--- a/webapp/package.json
+++ b/webapp/package.json
@@ -16,12 +16,19 @@
   },
   "dependencies": {
     "axios": "^0.17.0",
+    "babel-eslint": "^8.2.1",
+    "babel-polyfill": "^6.26.0",
     "date-fns": "^1.29.0",
     "decentraland-commons": "3.6.0",
+    "eslint": "^4.15.0",
+    "eslint-config-prettier": "^2.6.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "eslint-plugin-react": "^7.5.1",
     "ethereum-blockies": "^0.1.1",
     "history": "^4.7.2",
     "leaflet": "^1.3.0",
     "lodash.debounce": "^4.0.8",
+    "prettier": "^1.10.2",
     "prop-types": "^15.5.10",
     "query-string": "^5.1.0",
     "react": "^16.0.0",
@@ -45,16 +52,7 @@
     "rollbar": "^2.3.9",
     "semantic-ui-css": "^2.2.14",
     "semantic-ui-react": "^0.78.2",
-    "tinycolor2": "^1.4.1"
-  },
-  "devDependencies": {
-    "babel-eslint": "^8.2.1",
-    "babel-polyfill": "^6.26.0",
-    "eslint": "^4.15.0",
-    "eslint-config-prettier": "^2.6.0",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.5.1",
-    "prettier": "^1.10.2",
+    "tinycolor2": "^1.4.1",
     "webpack": "^3.10.0",
     "webpack-dotenv-plugin": "^2.0.2"
   }
